welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:11: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    if(i == 1){return Color.YELLOW }
                            ^MethodsPicture:11: warning: enclosing method couleur has result type Unit: return value discarded
    if(i == 1){return Color.YELLOW }
               ^MethodsPicture:12: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    if(i == 2){return Color.RED }
                            ^MethodsPicture:12: warning: enclosing method couleur has result type Unit: return value discarded
    if(i == 2){return Color.RED }
               ^MethodsPicture:13: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    if(i == 3){return Color.BLUE }
                            ^MethodsPicture:13: warning: enclosing method couleur has result type Unit: return value discarded
    if(i == 3){return Color.BLUE }
               ^MethodsPicture:14: error: Boolean does not take parameters
    else(i == 4){return Color.GREEN }
                ^MethodsPicture:23: error: type mismatch;
 found   : Unit
 required: java.awt.Color
					faireV(couleur(i));
                                                      ^